<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="br.edu.ufabc.padm.ebooklibrary.EbookInsert"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <EditText android:id="@+id/insert_ebook_titulo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/insert_ebook_titulo"
              android:inputType="textPersonName"/>

    <EditText android:id="@+id/insert_ebook_autor"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/insert_ebook_autor"
              android:inputType="textPersonName"/>

    <EditText android:id="@+id/insert_ebook_isbn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/insert_ebook_isbn"
              android:inputType="textPersonName"/>

    <EditText android:id="@+id/insert_ebook_anopublicacao"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/insert_ebook_anopublicacao"
              android:inputType="number"/>

    <EditText android:id="@+id/insert_ebook_editora"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/insert_ebook_editora"
              android:inputType="textPersonName"/>

    <EditText android:id="@+id/insert_ebook_avaliacao"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/insert_ebook_avaliacao"
              android:inputType="number"/>
    <Button
            android:text="Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/action_save"/>

</LinearLayout>